--- a/src/main/resources/properties/mailservice.properties
+++ b/src/main/resources/properties/mailservice.properties
@@ -8,7 +8,7 @@ mail.smtp.socketFactory.port=465
 mail.mime.charset=utf-8
 logging.properties=all
 
-mail.smtp.from=EE_WILL_I@mail.ru
-mail.smtp.user=EE_WILL_I@mail.ru
-mail.smtp.password=\u0441\u0435\u043A\u0440\u0435\u0442
-mail.smtp.replyto=java-online@mail.ru
+mail.smtp.from=mailnotificationservice@mail.ru
+mail.smtp.user=mailnotificationservice@mail.ru
+mail.smtp.password=bWnNUdWLDmcNrnng8kh0
+mail.smtp.replyto=mailnotificationservice@mail.ru
