--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.main.allow-bean-definition-overriding=true
 spring.application.name=MailNotificationService
 server.port=8000
 server.tomcat.additional-tld-skip-patterns=*.jar
