--- a/src/main/resources/properties/server.properties
+++ b/src/main/resources/properties/server.properties
@@ -4,4 +4,4 @@ app.webapppath=src/main/webapp
 auth.user=mnssuperuser
 auth.pass=MNSADMIN01
 #app.disableSecurity=true
-app.disableDatabase=true
+#app.disableDatabase=true
