--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -1,9 +1,9 @@
 datasource.url=jdbc:mysql://localhost:3306/
-datasource.schema=malevdb
+datasource.schema=mnsdb
 datasource.username=root
 datasource.password=root
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 sql.path=sql/
-sql.useDummyExecutor=true
+#sql.useDummyExecutor=true
 connection.args=?serverTimezone=UTC
 
